--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+Unity/MayaGameAnim/Maya Assets/.mayaSwatches/ChessRobotArm.ma.swatches
+
+Unity/MayaGameAnim/Maya Assets/ChessRobotArm.ma
