--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ Unity/MayaGameAnim/Maya Assets/.mayaSwatches/ChessRobotArm.ma.swatches
 Unity/MayaGameAnim/Maya Assets/ChessRobotArm.ma
 
 *.painter_lock
+
+ZBrush/TallRobot/TallRobot(NoPoncho)_autosave_1.spp
+
+ZBrush/TallRobot/TallRobot(NoPoncho)_autosave_0.spp
