--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,5 @@ Unity/MayaGameAnim/Maya Assets/ChessRobotArm.ma
 ZBrush/TallRobot/TallRobot(NoPoncho)_autosave_1.spp
 
 ZBrush/TallRobot/TallRobot(NoPoncho)_autosave_0.spp
+
+ZBrush/Sheriff/Sheriff_autosave_1.spp
